# Standalone

./: .editorconfig  .gitignore  Ability.cpp  Ability.h  CMakeLists.txt  Enums.h  Game.cpp  Game.h  GameClient.cpp  GameClient.h  Item.cpp  Item.h  Modifier.cpp  Modifier.h  OAA.md  Player.h  README.md  Unit.cpp  Unit.h  Utils.cpp  main.cpp
Addons/Arena/: Addon_Info.kv
Addons/Moba/: Addon_Info.kv
Addons/Sandbox/: Addon_Info.kv
Designs/: README.md
Designs/Boss/: Abyssal.md  Alpha_Wolf.md  Miner.md  README.md
Designs/Creep/: README.md
Designs/Hero/: Black_Jack.md  Dwarf.md  Earth_Elemental.md  Harpy.md  Hunter.md  Ice_Shard.md  Living_Armor.md  Loyal_Knight.md  Mori.md  Plague_Doctor.md  README.md  Riders_of_Apocalypse.md  Sniper.md  Storm_Hammer.md  Succubus.md  Sun_Lord.md  Undead_Queen.md  Young_Dragon.md
Designs/Heroes/: Black_Jack.md  Ice_Shard.md  Riders_of_Apocalypse.md  Sniper.md  Succubus.md  Sun_Lord.md  Undead_Queen.md
Designs/Item/: Core.md  README.md
Designs/Trinket/: README.md
Documentation/: README.md
Documentation/Discord_Integration/: README.md
Documentation/Editor/: README.md
Documentation/Gui/: README.md
Documentation/Keybinding/: README.md
Documentation/Lua_Api/: README.md
Documentation/Mechanics/: Abilities.md  Attributes.md  Cleave.md  Critical_Hits.md  Levels.md  README.md  Splash.md  Status_Effects.md
Documentation/ServerClient/: README.md
Documentation/Tutorials/: README.md
Game/: Addon_Info.kv
Game/Script/: Addon_AA_Ranked.lua  (+2 more)
Hero_Designs/: Dwarf.md  Ice_Shard.md  README.md  Riders_of_Apocalypse.md  Sniper.md  Succubus.md  Undead_Queen.md
Lua/: lapi.c  lauxlib.c  lbaselib.c  lcode.c  lcode.h  lcorolib.c  ldblib.c  ldebug.c  ldo.c  ldump.c  lfunc.c  lgc.c  linit.c  liolib.c  llex.c  llex.h  lmathlib.c  lmem.c  loadlib.c  lobject.c  lopcodes.h  loslib.c  lparser.c  lstate.c  lstring.c  lstrlib.c  ltable.c  ltablib.c  ltm.c  lua.c  lua.h  luac.c  luaconf.h  lundump.c  lutf8lib.c  lvm.c  lzio.c
LuaLibs/: LuaLibGlobal.cpp  LuaLibGlobal.h
Src/: Ability.cpp  Ability.h  AppConfiguration.h  Enums.h  Game.cpp  Game.h  GameClient.cpp  Map.cpp  Map.h  Modifier.cpp  Player.h  README.md  Unit.cpp  Unit.h  Utils.h  main.cpp
(+72 files in other folders)
